--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "deploy": "ionic build --prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
+    "@angular/forms": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
@@ -24,11 +26,13 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/angular": "^7.0.0",
+    "@ionic/angular": "^7.0.5",
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.21.0",
     "ionicons": "^7.0.0",
+    "ngx-pipes": "^3.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
