--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
@@ -31,6 +32,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.21.0",
+    "firebase-functions": "^4.4.0",
     "ionicons": "^7.0.0",
     "ngx-pipes": "^3.2.0",
     "rxjs": "~7.5.0",
