--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gestion-stock-pixecurity",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -10,7 +10,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "deploy": "ionic build --prod && firebase deploy"
+    "deploy-test": "ionic build && firebase use test-stock-c5184 && firebase deploy",
+    "deploy-prod": "ionic build && firebase use stock-pix-a0923 && firebase deploy"
   },
   "private": true,
   "dependencies": {
